--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,6 @@ apply plugin: 'maven-publish'
 group "org.openrewrite.samples"
 version "1.0.1"
 
-
 repositories {
     // Use jcenter for resolving your dependencies.
     // You can declare any Maven/Ivy/file repository here.
@@ -29,28 +28,20 @@ repositories {
 tasks.withType(JavaCompile) {        
     sourceCompatibility = JavaVersion.VERSION_1_8.toString()
     targetCompatibility = JavaVersion.VERSION_1_8.toString()
+    options.compilerArgs.add("-parameters")
 }
 
 dependencies {
-    // This dependency is exported to consumers, that is to say found on their compile classpath.
-    //api 'org.apache.commons:commons-math3:3.6.1'
+    compileOnly 'org.projectlombok:lombok:latest.release'
+    annotationProcessor 'org.projectlombok:lombok:latest.release'
 
-    // This dependency is used internally, and not exposed to consumers on their own compile classpath.
-    //implementation 'com.google.guava:guava:27.0.1-jre'
-
-    // Use JUnit test framework
-    testImplementation 'junit:junit:4.12'
-    
-  	compileOnly 'org.projectlombok:lombok:0.11.0'
-    
     //To make pre-packaged OpenRewrite recipes available for activation, add them as rewrite dependencies
     //rewrite("org.openrewrite.recipe:rewrite-spring:4.14.1")
     
     // rewrite-java dependencies only necessary for Java Recipe development
     implementation("org.openrewrite:rewrite-java:7.16.0")
-    //runtimeOnly("org.openrewrite:rewrite-java-11:7.16.0")
-    //runtimeOnly("org.openrewrite:rewrite-java-8:7.16.0")
-    // rewrite-maven dependency only necessary for Maven Recipe development
+    runtimeOnly("org.openrewrite:rewrite-java-11:7.16.0")
+    runtimeOnly("org.openrewrite:rewrite-java-8:7.16.0")
     //implementation("org.openrewrite:rewrite-maven:7.16.0")
     // rewrite-yaml dependency only necessary for Yaml Recipe development
     //implementation("org.openrewrite:rewrite-yaml:7.16.0")
@@ -59,7 +50,10 @@ dependencies {
     // rewrite-xml dependency only necessary for XML Recipe development
     //implementation("org.openrewrite:rewrite-xml:7.16.0")
     // For authoring tests for any kind of Recipe
-    //testImplementation("org.openrewrite:rewrite-test:7.16.0")
+    testImplementation("org.openrewrite:rewrite-test:7.16.0")
+    testImplementation("org.junit.jupiter:junit-jupiter-api:latest.release")
+    testImplementation("org.junit.jupiter:junit-jupiter-params:latest.release")
+    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:latest.release")
 }
 
 /*
